chore(deps): add mocha and chai for test and add config mocha for support typescript

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "example": "examples"
   },
   "scripts": {
-    "test": ""
+    "test": "mocha --require ts-node/register test/**/*.spec.ts --config ./.mocharc.jsonc",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -32,10 +33,14 @@
   },
   "homepage": "https://github.com/medishen/gland#readme",
   "devDependencies": {
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "@types/chai": "^4.3.17",
+    "@types/mocha": "^10.0.7",
+    "chai": "^4.3.7",
+    "mocha": "^10.4.0",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "@types/node": "^22.0.0"
+    "@types/node": "^22.0.0",
+    "typescript": "^5.5.4"
   }
 }
