--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,18 @@
 {
-    "compilerOptions": {
-      "target": "es6",
-      "module": "commonjs",
-      "strict": true,
-      "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true,
-      "experimentalDecorators": true,
-      "emitDecoratorMetadata": true,
-      "skipLibCheck": true,
-      "moduleResolution": "node",
-      "rootDir": "lib",
-      "outDir": "dist",
-      "typeRoots": [
-        "node_modules/@types",
-        "lib/types"
-      ]
-    },
-    "include": ["lib/**/*.ts"]
-  }
-  
+  "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "strict": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "skipLibCheck": true,
+    "moduleResolution": "node",
+    "rootDir": "lib",
+    "outDir": "dist",
+    "resolveJsonModule": true,
+    "typeRoots": ["node_modules/@types", "lib/types"]
+  },
+  "include": ["lib/**/*.ts", "/*.ts"]
+}
