feat(example/crud): add simple crud example

--- a/examples/CRUD/package.json
+++ b/examples/CRUD/package.json
@@ -7,9 +7,5 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@types/cors": "^2.8.17",
-    "cors": "^2.8.5"
-  }
+  "description": ""
 }
