chore: update main file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gland",
   "version": "1.0.0",
   "description": "Gland is a lightweight framework for Node.js designed for simplicity and high performance.",
-  "main": "gland/index.ts",
+  "main": "index.ts",
   "directories": {
     "doc": "docs",
     "lib": "lib",
