chore: add types

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Gland is a lightweight framework for Node.js designed for simplicity and high performance.",
   "main": "index.ts",
+  "types": "index.ts",
   "directories": {
     "doc": "docs",
     "lib": "lib",
