feat: It was compiled to javascript and the gland.d.ts file was deleted in the types section. Added dist directory to gitignore and lib directory to npmignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-/node_modules
-dist
-/dist
+# Node modules
+/node_modules/
+
+# Compiled output
+/dist/
+
+# Logs
+*.log
+
+# Environment variables
+.env
