--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "env $(cat .env | xargs) mocha --require ts-node/register npm run test:unit & test/**/*.spec.ts",
+    "test": "mocha --require ts-node/register npm run test:unit & test/**/*.spec.ts",
     "test:unit": "mocha --require ts-node/register lib/**/__test__/*.spec.ts",
-    "test:e2e": "env $(cat .env | xargs) mocha --require ts-node/register test/e2e/**/*.spec.ts",
-    "test:integration": "env $(cat .env | xargs) mocha --require ts-node/register test/integration/*.spec.ts",
-    "test:performance": "env $(cat .env | xargs) mocha --require ts-node/register test/performance/*.spec.ts",
+    "test:e2e": "mocha --require ts-node/register test/e2e/**/*.spec.ts",
+    "test:performance": "mocha --require ts-node/register test/performance/*.spec.ts",
     "build": "rm -r dist/* & tsc",
     "release": "scripts/release.sh"
   },
