--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "mocha --require ts-node/register npm run test:unit & test/**/*.spec.ts",
+    "test": "npm run test:unit & npm run test:e2e & npm run test:performance",
     "test:unit": "mocha --require ts-node/register lib/**/__test__/*.spec.ts",
-    "test:e2e": "mocha --require ts-node/register test/e2e/**/*.spec.ts",
+    "test:e2e": "mocha --require ts-node/register test/e2e/*.spec.ts",
     "test:performance": "mocha --require ts-node/register test/performance/*.spec.ts",
     "build": "rm -r dist/* & tsc",
     "release": "scripts/release.sh"
