chore: release version 1.0.0

--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,13 @@
 node_modules/
 lib/
-examples/
-tests/
+test/
 __test__/
 examples/
-coverage/
 docs/
-*.md
-*.pdf
 .git/
 .gitignore
-.env
-.prettierrc
-.eslintrc
 .github/
+.prettierrc
+tsconfig.json
+scripts/
+benchmark/
