--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,5 @@
     "typeRoots": ["node_modules/@types", "lib/types"]
   },
   "include": ["lib/**/*.ts", "lib/types/*.d.ts"],
-  "exclude": [
-    "node_modules",
-    "dist",
-  ]
+  "exclude": ["node_modules", "dist"]
 }
