chore: Preparation for the second version as well as the implementation of todo.md for the second version along with the installation of qiks and logger packages

--- a/package.json
+++ b/package.json
@@ -55,5 +55,9 @@
     "sinon": "^19.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "@medishn/logger": "^2.0.1",
+    "@medishn/qiks": "^1.0.1"
   }
 }
