feat: The overall architecture of the project was changed and qiks and logger packages were added and previous files along with tests were deleted and new files were replaced with new logic. In the next steps, v2 Gland features will be added to reach its best state and become completely stable.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "rootDir": "lib",
     "outDir": "dist",
     "resolveJsonModule": true,
-    "typeRoots": ["node_modules/@types", "lib/types"]
+    "typeRoots": ["lib/types", "lib/types/global.d.ts", "node_modules/@types"]
   },
   "include": ["lib/**/*.ts", "lib/types/*.d.ts"],
   "exclude": ["node_modules", "dist"]
