feat(router): add MultiLang decorator, fix ctx bug, and add bindProperties method
- Implemented MultiLang decorator for multilingual route support.
- Fixed ctx bug by defining a custom type for HttpContext.
- Added bindProperties method to resolve the ctx issue.
- Wrote DDD unit tests for router.ts to ensure proper functionality.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,10 @@
     "declaration": true,
     "rootDir": "lib",
     "outDir": "dist",
+    "types": ["node", "lib/types"],
     "resolveJsonModule": true,
-    "typeRoots": ["lib/types", "lib/types/global.d.ts", "node_modules/@types"]
+    "typeRoots": ["lib/types", "node_modules/@types"]
   },
-  "include": ["lib/**/*.ts", "lib/types/*.d.ts"],
+  "include": ["lib/**/*.ts", "lib/types/*.d.ts", "test/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
