Refactor Project Structure, Enhance Context Handling, and Fix Bugs
This commit refines the overall project structure, introduces new features, and fixes multiple issues to improve clarity and functionality. Below is a summary of the changes made:

- Updated Project Structure: The project structure has been reorganized. All types, enums, and interfaces have been moved to the `common` directory. Additional functions, classes, and utilities have been refactored into the `utils` directory for better organization.

- Removal of Extra Abstractions: The `RouterManager`, `MiddlewareManager`, and `EventSystemManager` files were removed to eliminate unnecessary abstraction layers. This simplification improves code maintainability and reduces complexity.

- New ContextFactory Class: Introduced the `ContextFactory` class, which is responsible for creating responses to various lifecycle events, such as start, stop, and route events, improving event management within the framework.

- Enhancement of the `Context` Class:
  - Added a `send` method to the `Context` class, which handles various response types, including streams, strings, buffers, and objects.
  - Introduced a `lang` method for setting the language value in request headers.
  - Added a `status` method to set the `statusCode` value in both the `ctx` and `res`.

- Bug Fixes:
  - Fixed an issue where the `appName` and `env` values were undefined during project startup.
  - Corrected the use of the logical OR (`||`) operator and replaced it with the nullish coalescing operator (`??`) throughout the entire codebase to avoid unintended falsy values.

- Decorator Updates:
  - Added `Module`, `Inject`, and `Injectable` decorators for handling various modules and services within the Gland framework, similar to the NestJS framework's dependency injection system.

- New `ActionHandler` Class: Introduced the `ActionHandler` class to manage the lifecycle of actions, transformations, and guards. It ensures that actions are executed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,10 @@
     "declaration": true,
     "rootDir": "lib",
     "outDir": "dist",
-    "types": ["node", "lib/types"],
+    "types": ["node"],
     "resolveJsonModule": true,
-    "typeRoots": ["lib/types", "node_modules/@types"]
+    "typeRoots": ["lib/common/types", "node_modules/@types"]
   },
-  "include": ["lib/**/*.ts", "lib/types/*.d.ts", "test/**/*.ts"],
+  "include": ["lib/**/*.ts", "lib/common/types/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
