feat(example): A simple example was added which includes AppConfig as well as the use of Module and Controller decorators and http method.
The Environment enum usage has been removed and replaced with string literals for environment settings This change simplifies the configuration by directly using strings like DEVELOPMENT instead of referencing an enum This modification is reflected in files such as config ts and event interface ts

The ResponseBody type in context interface ts has been simplified from a union of multiple types including SuccessResponse and ErrorResponse to a more flexible any type This change reduces type safety but allows for greater flexibility in handling response data

The SuccessResponse and ErrorResponse interfaces have been removed as they are no longer needed This cleanup helps reduce unnecessary code and improves maintainability

The custom logger implementation Glogger has been removed along with its associated dependencies This includes removing the logger from CoreModule ts and deleting the Glogger class from app utils ts The logger dependency @medishn logger has also been removed from package json and pnpm lock yaml This change indicates a shift away from a custom logging solution possibly in favor of simpler logging mechanisms like console log

The listen method in Application ts has been updated to accept a callback function that receives port and hostname parameters This change provides more context to the callback function making it more useful for logging or other purposes

The RouteNormalizer class in decorator utils ts has been updated to handle edge cases in path normalization Specifically it now correctly handles paths that are just a single slash ensuring consistent behavior

--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "npm run test:unit & npm run test:e2e & npm run test:performance",
+    "test": "npm run test:unit",
     "test:unit": "mocha --require ts-node/register test/unit/**/*.spec.ts",
-    "test:performance": "mocha --require ts-node/register test/performance/*.spec.ts",
     "benchmark": "ts-node ./benchmark/gland.ts",
     "build": "rm -r dist/* & tsc",
     "chmod": "chmod +x ./scripts/release.sh",
@@ -56,7 +55,6 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@medishn/logger": "^2.0.1",
     "@medishn/qiks": "^1.1.0"
   }
 }
