chore: Added new readme.md along with new items to ignore files for git and npm. The name of the package was changed from @medishn/gland to @gland/etc.. to preserve the structure of the mono repo and write it better and more complete. tsconfig has been changed and package names are written in path.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-# Node modules
+packages/*/package-lock.json
+dist
 /node_modules/
 
-# Compiled output
-/dist/
+packages/**/node_modules/
+# bundle
+packages/**/*.d.ts
+packages/**/*.js
+
 
 # Logs
 *.log
