--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@gland/common": "workspace:*",
-    "@gland/metadata": "workspace:*"
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "typescript": "^5.5.4"
