--- a/packages/debug/tsconfig.json
+++ b/packages/debug/tsconfig.json
@@ -7,5 +7,9 @@
   "files": [],
   "include": ["**/*.ts"],
   "exclude": ["node_modules"],
-  "references": []
+  "references": [
+    {
+      "path": "../common"
+    }
+  ]
 }
