feat(core): The @medishn/toolkit package was added and the typos, http-errors, http-status-code and the rest of the duplicates that were in the package were removed. Also, the @gland/debug package was removed because there was only one logger in it. Maybe in the future a package with this name will be released for easy debugging of the package!

--- a/packages/tsconfig.build.json
+++ b/packages/tsconfig.build.json
@@ -1,14 +1,16 @@
 {
   "files": [],
   "references": [
-    { "path": "./cache" },
-    { "path": "./common" },
-    { "path": "./config" },
+    // core
     { "path": "./core" },
+    { "path": "./common" },
+    // http layer
+    // event system
+    // path: "./reactors"
+    // Advanced
+    { "path": "./validators" },
+    { "path": "./config" },
     { "path": "./debug" },
-    { "path": "./events" },
-    { "path": "./metadata" },
-    { "path": "./testing" },
-    { "path": "./validators" }
+    { "path": "./testing" }
   ]
 }
