chore: The documents were updated and the logo for gland was created and added to README.md. Also, a new document for participation was created and added.

--- a/packages/tsconfig.build.json
+++ b/packages/tsconfig.build.json
@@ -1,16 +1,4 @@
 {
   "files": [],
-  "references": [
-    // core
-    { "path": "./core" },
-    { "path": "./common" },
-    // http layer
-    // event system
-    // path: "./reactors"
-    // Advanced
-    { "path": "./validators" },
-    { "path": "./config" },
-    { "path": "./debug" },
-    { "path": "./testing" }
-  ]
+  "references": [{ "path": "./core" }, { "path": "./common" }]
 }
