chore: edit .gitignore file to include package manager lock files and .DS_Store file

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@ packages/**/*.js
 .env
 # npm pack
 *.tgz
+
+# Package manager lock files
+**/yarn.lock
+**/bun.lock
+**/pnpm-lock.yaml
+
+# Mac files
+.DS_Store
