feat(packages): add @gland/http package

--- a/packages/tsconfig.build.json
+++ b/packages/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
   "files": [],
-  "references": [{ "path": "./core" }, { "path": "./common" }]
+  "references": [{ "path": "./core" }, { "path": "./common" }, { "path": "./http" }]
 }
