chore: The lint-staged script has been improved and now writes based on the .prettierignore file. The gitignore and package.json files have been sorted.

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,18 @@
 packages/*/package-lock.json
-dist
-/node_modules/
 
-packages/**/node_modules/
+# dependencies
+node_modules/
+
 # bundle
 packages/**/*.d.ts
 packages/**/*.js
 
-
-# Logs
-*.log
-
 # Environment variables
 .env
-# npm pack
-*.tgz
 
-
-# Mac files
+# misc
 .DS_Store
 .idea/
 .vscode/
+/packages/**/.npmignore
+/packages/**/LICENSE
