feat(events): A new option was added to the methods emit on emitTo and etc. which gives an option to queue or not events. Also, the logic for executing the queue was simplified and unnecessary items were removed and simple logic was added to execute events that are placed in the queue.
- Some bugs for wildcard in rotuer were fixed along with tree.
- Debug logger was removed.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "packages/*"
   ],
   "scripts": {
-    "test:integration": "mocha --require ts-node/register test/integration/**/*.spec.ts"
+    "test:integration": "mocha --require ts-node/register test/integration/**/*.spec.ts",
+    "test:unit": "mocha --require ts-node/register test/unit/**/*.spec.ts"
   },
   "lint-staged": {
     "**/*.ts": "prettier --ignore-path ./.prettierignore --write"
